# discribench

./: README.md  pyproject.toml  requirements.txt
data/: README.md  discribench_en_200.jsonl  discribench_ja_200.jsonl
data/ablation/: answer_embed_en_100.jsonl  answer_embed_ja_100.jsonl  lan_easy_en_100.jsonl  lan_easy_ja_100.jsonl  lan_medium_en_100.jsonl  lan_medium_ja_100.jsonl  main_en_100.jsonl  main_ja_100.jsonl  vis_easy_en_100.jsonl  vis_easy_ja_100.jsonl  vis_medium_en_100.jsonl  vis_medium_ja_100.jsonl
data/images/: metadata.jsonl
src/: LICENSE-2.0.txt  README.md  open_vlm_utils.py  predict_claude.py  predict_openai.py  predict_vlm.py  score.py  utils.py
