[project]
name = "discribench"
version = "0.1.0"
description = "discribench"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "anthropic==0.34.2",
    "httpx<0.28",
    "openai==1.51.0",
    "pillow==10.4.0",
    "tenacity>=9.1.4",
    "torch==2.5.1",
    "transformers==4.47.0",
    "vllm==0.6.4.post1",
]
